favicon and the other things correction

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Madhur N Patel — Full-Stack & AI/ML Developer" />
     <meta property="og:description" content="B.Tech CSE student building efficient web, mobile, and AI solutions. MERN, TensorFlow, Android, IoT specialist from Ahmedabad, India." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://madhur-n.vercel.app" />
+    <meta property="og:url" content="https://madhur.dev" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Madhur N Patel — Full-Stack & AI/ML Developer" />
